@startuml
'stateless namespace EtAlii.Generators.Stateless.Tests
'stateless class MyAsyncStateMachineBase
'stateless generate partial
'stateless using System.Text

[*] -> State1 << async (string name) >> : Start
State1 : this is a string
State1 : this is another string
State1 -> State2 << async >> : Continue
State2 -down-> [*] : Stop
State2 -> State2 << (string name) >> : Check
State2 -up-> State3 << async >> : Continue
State3 -up-> State4 : Continue
@enduml
